7446: Make generate apischema deterministic
